syntax = "proto3";

package person;

message Person {
  string id = 1;
  string personFirstName = 2;
  string personSecondName = 3;
  string personFirstSurname = 4;
  string personSecondSurname = 5;
  string personCompanyName = 6;
  string companyId = 7;
  string typePersonId = 8;
  string typeIdentificationId = 9;
}

// *********** One ***********
message IEntityOne {
  Person entity = 1;
}

// *********** Many ***********
message IEntityMany {
  repeated Person entities = 1;
}

service PersonService {
  rpc CreateOne (IEntityOne) returns (IEntityOne) {}
  rpc UpdateOne (IEntityOne) returns (IEntityOne) {}
  rpc DeleteOne (IEntityOne) returns (IEntityOne) {}
  rpc SearchById (IEntityOne) returns (IEntityOne) {}
  rpc SearchMany (IEntityMany) returns (IEntityMany) {}
}